# nakshatra

./: .gitignore  AGENTS.md  BRANCHES.md  CLAUDE.md  INBOX.md  README.md  nysa.md  setup.cfg
assets/: render_pngs.py
deploy/: build-ijru-cuda.sh  build-vulkan-worker.sh  crossbox-ijru.md  dbg_keepkv.py  eagle_datagen.py  eagle_draft.py  eagle_fwd_smoke.py  eagle_speculative.py  from-roster-cutover.md  ft_gpu.py  imac-unconscious-bringup.md  install-mesh.sh  install-unconscious.sh  lifecycle.70b.example.json  make-worker-stack.sh  measure_eagle_live.py  meshd.env.example  next-rocks-design.md  path-b-eagle-head.md  path-b-overnight-handoff.md  provision-worker.sh  rebuild-worker.sh  run-imac-unconscious.sh  test_eagle_cmd5.py  test_eagle_kv_isolation.py  test_sleep_wake.py
deploy/systemd/: nakshatra-meshd.service  nakshatra-relay.service  nakshatra-unconscious-worker@.service  nakshatra-unconscious.service
docs/: 2026-06-19-speed-stack-plan.md  INFRA-MAP.md  THREAT_MODEL.md  compute-lifecycle.md  cross-machine-validation.md  four-project-architecture.md  m4-decode-patch-design.md  md_to_pdf.py  north-star.md  paper-draft.html  paper-draft.md  path-a-vs-path-b-memo.md  petals-architecture.md  petals-deep-read.md  research-findings-topology-resilience.md  thesis.html  thesis.md  three-project-architecture.md  v0.0-cb-eval-spike-plan.md  v0.0-validation-plan.md  v0.1-api-surface.md  v0.1-implementation-plan.md  v0.1-validation-partial-gguf.md  v0.5-design-lock.md  v1.0-discovery-and-distribution.md  v1.0-fault-tolerance.md  v1.1-sovereign-transport.md  vs-mesh-llm.md
docs/findings/: metal-last-buffer-set-tensor.md
experiments/v0.0/: CMakeLists.fabric.txt  (+19 more)
proto/: nakshatra.proto
scripts/: .gitignore  README-gateway.md  act_quant.py  bench_cluster.example.yaml  bench_partition.py  bench_placement.py  bootstrap-cluster-deps.sh  client.py  cluster_3worker.yaml  cluster_5worker.yaml  cluster_crossmachine.yaml  cluster_l3370b_4mac_test.yaml  cluster_l3370b_5machine.yaml  cluster_localhost.yaml  cluster_qwen3moe_4mac.yaml  cluster_smoke_full.yaml  cluster_unconscious_1b.yaml  cluster_unconscious_dsr1_14b.yaml  cluster_unconscious_dsr1_70b.yaml  cluster_unconscious_dsr1_70b_2machine.yaml  cluster_unconscious_dsr1_llama8b.yaml  cluster_v01_test.yaml  cluster_v01_test_with_alt.yaml  edge_health.py  gen_chain_config.py  generate.sh  identity_binding.py  ledger_client.py  nakshatra_audit.py  nakshatra_auth.py  nakshatra_cli.py  nakshatra_grpc_auth.py  nakshatra_pb2.py  nakshatra_pb2_grpc.py  nakshatra_sandbox.py  nakshatra_serve.py  nakshatra_tls.py  nakshatra_validation.py  netsim_proxy.py  placement.py  (+31 more)
spike/v0.0/: .gitignore  CMakeLists.txt  STEP-RESULTS.md  build.sh  cb_eval_handoff.cpp  cb_eval_observe.cpp  cb_eval_write.cpp
tests/: conftest.py  test_act_quant.py  test_activation_cache.py  test_bench_partition.py  test_client_registry.py  test_client_tls.py  test_discovery.py  test_drift_aware_recovery.py  test_drift_gauge.py  test_edge_health.py  test_fabric_backend.py  test_fabric_join.py  test_fabric_link_stats.py  test_fabric_packet.py  test_fabric_shm_daemon_client.py  test_fabric_shm_ring.py  test_fabric_transport.py  test_identity_handshake.py  test_layer_packages.py  test_listing_provenance.py  test_mesh_pairing.py  test_meshd_discovery.py  test_mux_tunnel.py  test_nakshatra_auth.py  test_nakshatra_cli.py  test_nakshatra_sandbox.py  test_nakshatra_serve.py  test_nakshatra_tls.py  test_nostr.py  test_placement.py  test_prewarm.py  test_receipt.py  test_relay.py  test_roster_lifecycle.py  test_routing.py  test_secure_channel.py  test_slice_cdc.py  test_slice_directory.py  test_slice_fetch.py  test_slice_node.py  (+17 more)
(+72 files in other folders)
