[metadata]
name = petals
version = attr: petals.__version__
author = Petals Developers
author_email = petals-devs@googlegroups.com
description = Easy way to efficiently run 100B+ language models without high-end GPUs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bigscience-workshop/petals
project_urls =
    Bug Tracker = https://github.com/bigscience-workshop/petals/issues
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    torch>=1.12
    bitsandbytes==0.41.1
    accelerate>=0.27.2
    huggingface-hub>=0.11.1,<1.0.0
    tokenizers>=0.13.3
    transformers==4.43.1  # if you change this, please also change version assert in petals/__init__.py
    speedtest-cli==2.1.3
    hivemind @ git+https://github.com/learning-at-home/hivemind.git@213bff98a62accb91f254e2afdccbf1d69ebdea9
    tensor_parallel==1.0.23
    humanfriendly
    async-timeout>=4.0.2
    cpufeature>=0.2.0; platform_machine == "x86_64"
    packaging>=20.9
    sentencepiece>=0.1.99
    peft==0.8.2
    safetensors>=0.3.1
    Dijkstar>=2.6.0
    numpy<2
    # Phase F4 (worker hardening sprint, 2026-05-19): Ed25519 + TLS
    # primitives for the Sthambha pillar handshake. Pinned range matches
    # Sthambha's pyproject.toml so the two repos coexist in one env.
    cryptography>=41.0,<46

[options.extras_require]
dev =
    pytest==6.2.5
    pytest-forked
    pytest-asyncio==0.16.0
    black==22.3.0
    isort==5.10.1
    psutil
# v1.0 §4 discovery — the real Nostr (NIP-01) transport. Optional: the listing
# schema, ranking, admission pin, and event mapping all work without these;
# only NostrRelay (publishing/querying a public relay) needs them.
discovery =
    coincurve>=18          # secp256k1 BIP340 Schnorr for NIP-01 event signatures
    websocket-client>=1.6  # sync client used by NostrRelay
    websockets>=12         # server lib (local relay for tests / self-hosting)

[options.packages.find]
where = src
